# alberta-efiling-system-docs-scraper

./: .gitignore  LICENSE  Makefile  README.md  app.py  cdk.json  pyproject.toml  ruff.toml
alberta_efiling_system_docs_scraper/: alberta_efiling_system_docs_scraper_stack.py  utils.py
data/: proceeding_data.csv  proceeding_data_requests.jsonl
lambda/: check.py
scripts/: csv_to_jsonl.py
tests/unit/: test_alberta_efiling_system_docs_scraper_stack.py
