[tool.poetry]
name = "based-logging"
version = "0.1.0"
description = "Unlimited Log Retention for AWS Lambda Functions with a Single Line of Code!"
authors = ["suffer-sami <sami_email@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
